force-app/main/default/objects/CLQ_Role__c/CLQ_Role__c.object-meta.xml
<CustomObject>
    <description>Role of a contact in an organization</description>
    <label>Role</label>
    <nameField>
        <displayFormat>Role-{00000000}</displayFormat>
        <label>Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>