force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Age_Formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Age_Formula__c</fullName>
    <formula>CLQ_Contact__r.CLQ_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>