force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Approval_terminated_2_years__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approval_terminated_2_years__c</fullName>
    <label>Approval terminated 2 years</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>