force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Are_you_currently_Licensed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Are_you_currently_Licensed__c</fullName>
    <inlineHelpText>Are you currently Licensed as the Child Care Provider/Program by the ODJFS?</inlineHelpText>
    <label>Are you currently Licensed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>