force-app/main/default/objects/CLQ_Role__c/fields/CLQ_BCI_5_Year_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_BCI_5_Year_Expiration_Date__c</fullName>
    <formula>IF(
  AND(
    MONTH( CLQ_Effective_Date_BCI__c  ) = 2,
    DAY( CLQ_Effective_Date_BCI__c ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( CLQ_Effective_Date_BCI__c ), 400 ) = 0, 
        AND( 
          MOD( YEAR( CLQ_Effective_Date_BCI__c ), 4 ) = 0,
          MOD( YEAR( CLQ_Effective_Date_BCI__c ), 100 ) != 0
        )
      )
    ) 
  ),
  DATE(YEAR(CLQ_Effective_Date_BCI__c)+5,3,1)-1,
  DATE( YEAR( CLQ_Effective_Date_BCI__c ) + 5, MONTH( CLQ_Effective_Date_BCI__c ), DAY( CLQ_Effective_Date_BCI__c ))-1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCI 5 Year Expiration Date</label>
    <type>Date</type>
</CustomField>