force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Case__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is to document children involved in Incident/Injury</description>
    <label>Case</label>
    <referenceTo>CLQ_Case_Custom__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>