force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Certified_as_Provider_within_past_5__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Certified_as_Provider_within_past_5__c</fullName>
    <description>Within the past five years, have you been licensed as a child care provider/program by ODJFS?</description>
    <inlineHelpText>Within the past five years, have you been licensed as a child care provider/program by ODJFS?</inlineHelpText>
    <label>Certified as Provider within past 5 yrs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>