force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Certified_Licensed_by_other_state__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Certified_Licensed_by_other_state__c</fullName>
    <label>Certified/Licensed by another state?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>