force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Comments_BCI__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Comments_BCI__c</fullName>
    <label>BCI Comments</label>
    <type>TextArea</type>
</CustomField>