force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Comments_FBI__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Comments_FBI__c</fullName>
    <label>FBI Comments</label>
    <type>TextArea</type>
</CustomField>