force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>