force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact_Email_Address__c</fullName>
    <description>Value is set from Contact trigger whenever contact&apos;s email is changed.</description>
    <label>Contact Email Address</label>
    <type>Email</type>
</CustomField>