force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact_Name__c</fullName>
    <formula>CLQ_Contact__r.FirstName + &apos; &apos; +  CLQ_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>