force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Contact_OPIN__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact_OPIN__c</fullName>
    <description>To Capture and send to Informatica Job</description>
    <formula>CLQ_Contact__r.OPIN__c</formula>
    <label>Contact OPIN</label>
    <type>Text</type>
</CustomField>