force-app/main/default/objects/CLQ_Role__c/fields/CLQ_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>