force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Criminal_Record_FBI__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Criminal_Record_FBI__c</fullName>
    <label>FBI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>