force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does Not Meet Rehabilitation Standards</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>