force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Effective_Date_BCI__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Effective_Date_BCI__c</fullName>
    <label>BCI Completion Date</label>
    <type>Date</type>
</CustomField>