force-app/main/default/objects/CLQ_Role__c/fields/CLQ_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_End_Date__c</fullName>
    <inlineHelpText>Date the individual ended in this role</inlineHelpText>
    <label>Role End Date</label>
    <type>Date</type>
</CustomField>