force-app/main/default/objects/CLQ_Role__c/fields/CLQ_FBI_5_year_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_FBI_5_year_Expiration_Date__c</fullName>
    <formula>IF(
  AND(
    MONTH( CLQ_Effective_Date_FBI__c ) = 2,
    DAY( CLQ_Effective_Date_FBI__c) = 29,
    NOT( 
      OR( 
        MOD( YEAR( CLQ_Effective_Date_FBI__c), 400 ) = 0, 
        AND( 
          MOD( YEAR( CLQ_Effective_Date_FBI__c), 4 ) = 0,
          MOD( YEAR( CLQ_Effective_Date_FBI__c), 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( CLQ_Effective_Date_FBI__c) + 5, 3, 1)-1,
  DATE( YEAR( CLQ_Effective_Date_FBI__c) + 5, MONTH( CLQ_Effective_Date_FBI__c), DAY( CLQ_Effective_Date_FBI__c))-1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FBI 5 year Expiration Date</label>
    <type>Date</type>
</CustomField>