force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Inspection_Email_Check__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Email_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Email Check</label>
    <type>Checkbox</type>
</CustomField>