force-app/main/default/objects/CLQ_Role__c/fields/CLQ_License_Revoked_Previously__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Revoked_Previously__c</fullName>
    <description>Was your license ever revoked</description>
    <inlineHelpText>Was your license ever revoked</inlineHelpText>
    <label>License Revoked Previously</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>