force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Licensed_as_Provider_within_past5yrs__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Licensed_as_Provider_within_past5yrs__c</fullName>
    <inlineHelpText>If you own/owned more than one program, list the most recently licensed.</inlineHelpText>
    <label>Licensed as Provider within past 5 yrs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>