force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Organization__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Organization this individual as a role with</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Individuals</relationshipLabel>
    <relationshipName>Organization_Individual</relationshipName>
    <type>Lookup</type>
</CustomField>