force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Other_Deny_Reason__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Deny_Reason__c</fullName>
    <label>Other Deny Reason</label>
    <type>TextArea</type>
</CustomField>