force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Portal_New_Role__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Portal_New_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to denote new contact roles from the portal.  Created by JSC on 1/5/2017 Updated 1/17/2017 - set to false on default, and the portal code will set this to true when it inserts a new record.</description>
    <label>Portal New Role</label>
    <type>Checkbox</type>
</CustomField>