force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Prior_Age__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Age__c</fullName>
    <label>Prior Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>