force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Prior_Contact_DOB__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Contact_DOB__c</fullName>
    <label>Prior Contact DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>