force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Prior_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_End_Date__c</fullName>
    <label>Prior End Date</label>
    <type>Date</type>
</CustomField>