force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Prior_Relationship__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Relationship__c</fullName>
    <label>Prior Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>