force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Prior_Role__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Role__c</fullName>
    <label>Prior Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>