force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Prior_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Start_Date__c</fullName>
    <label>Prior Start Date</label>
    <type>Date</type>
</CustomField>