force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Role is a junction object between Program and Contact</description>
    <inlineHelpText>Role is a junction object between Program and Contact</inlineHelpText>
    <label>Program</label>
    <referenceTo>CLQ_Program__c</referenceTo>
    <relationshipLabel>Associated Individuals</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>