force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Program_Name1__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Name1__c</fullName>
    <inlineHelpText>If yes, provide additional information (up to 3 sets of):</inlineHelpText>
    <label>1. Program Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>