force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Program_Name3__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Name3__c</fullName>
    <label>3. Program Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>