force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Program_name_Formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_name_Formula__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program name Formula</label>
    <type>Text</type>
</CustomField>