force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Number__c</fullName>
    <description>If you own more than 1 program, list the most recently licensed</description>
    <inlineHelpText>If you own more than 1 program, list the most recently licensed</inlineHelpText>
    <label>Program Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>