force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Program_Transaction_RecordType__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Transaction_RecordType__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Transaction RecordType</label>
    <type>Text</type>
</CustomField>