force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Program_Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Transaction_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Program Transaction that created this record</inlineHelpText>
    <label>Program Transaction Source</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Associated Individuals</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>