force-app/main/default/objects/CLQ_Role__c/fields/CLQ_PT_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_Approval_Date__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_Transaction_Approval_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Approval Date</label>
    <type>Date</type>
</CustomField>