force-app/main/default/objects/CLQ_Role__c/fields/CLQ_PT_ApprovedFirst_Day_at_New_Location__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_ApprovedFirst_Day_at_New_Location__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_Approved_First_Day_at_New_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Approved First Day at New Location</label>
    <type>Date</type>
</CustomField>