force-app/main/default/objects/CLQ_Role__c/fields/CLQ_PT_New_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_New_County__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_New_County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT New County</label>
    <type>Text</type>
</CustomField>