force-app/main/default/objects/CLQ_Role__c/fields/CLQ_PT_New_State__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_New_State__c</fullName>
    <formula>TEXT(CLQ_Program_Transaction_Source__r.CLQ_New_State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT New State</label>
    <type>Text</type>
</CustomField>