force-app/main/default/objects/CLQ_Role__c/fields/CLQ_PT_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_Street_Address_2__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_New_Street_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Street Address 2</label>
    <type>Text</type>
</CustomField>