force-app/main/default/objects/CLQ_Role__c/fields/CLQ_PT_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_Street_Address__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_New_Street_Address_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Street Address</label>
    <type>Text</type>
</CustomField>