force-app/main/default/objects/CLQ_Role__c/fields/CLQ_PT_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_Zipcode__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_New_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Zipcode</label>
    <type>Text</type>
</CustomField>