force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Reason_Codes__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reason_Codes__c</fullName>
    <label>Qualifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoted/Courses Due</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>College/CD courses</fullName>
            </value>
            <value>
                <fullName>Experience/CD Courses</fullName>
            </value>
            <value>
                <fullName>AA Child Dev./ECE</fullName>
            </value>
            <value>
                <fullName>BS Child Dev./ECE</fullName>
            </value>
            <value>
                <fullName>Ph.D. Child Dev/ECE</fullName>
            </value>
            <value>
                <fullName>AS 12 sem/18 qtr hrs CD/ECE</fullName>
            </value>
            <value>
                <fullName>BS 12 sem/18 qtr hrs CD/ECE</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Career Pathways Level 1</fullName>
            </value>
            <value>
                <fullName>Career Pathways Level 2</fullName>
            </value>
            <value>
                <fullName>Career Pathways Level 3</fullName>
            </value>
            <value>
                <fullName>ODE Preschool License</fullName>
            </value>
            <value>
                <fullName>Montessori Credential</fullName>
            </value>
            <value>
                <fullName>Ohio Administrator Credential</fullName>
            </value>
            <value>
                <fullName>Does NOT meet requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>