force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Recordtype_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Recordtype_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Recordtype Name</label>
    <type>Text</type>
</CustomField>