force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Registration_No_Prev_Approved_Camp__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Registration_No_Prev_Approved_Camp__c</fullName>
    <label>Registration Number Prev Approved Camp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>