force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reviewer_Comments__c</fullName>
    <label>Reviewer Comments</label>
    <type>TextArea</type>
</CustomField>