force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Role__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Role__c</fullName>
    <description>Role of a contact in an organization or program.</description>
    <inlineHelpText>Role of a contact in an organization or program.</inlineHelpText>
    <label>Program Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>On-site Contact</fullName>
            </value>
            <value>
                <fullName>Authorized Representative</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Alternate On Site Contact</fullName>
            </value>
            <value>
                <fullName>Parent_Guardian</fullName>
                <label>Parent - Guardian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>