force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Start_Date__c</fullName>
    <inlineHelpText>Date the individual started in this role</inlineHelpText>
    <label>Role Start Date</label>
    <type>Date</type>
</CustomField>